# AutoLabeling

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  README_CN.md  README_EN.md  README_ZH.md  cli.py  docker-compose.yml  start.bat  start.sh
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  autolabeling.db  data.db  decord_stub.py  pyproject.toml  requirements-sam3.txt  requirements.txt  sam3_server.py
backend/alembic/: env.py
backend/alembic/versions/: 04f67c773c3f_add_model_type_to_detections.py  5baeca04aab3_initial_schema.py  a1b2c3d4e5f6_add_video_tables.py  b2c3d4e5f6a7_add_split_ratio_task_type.py  c2f5a8b9d3e6_add_name_to_training_jobs.py  c3d4e5f6a7b8_add_mask_polygon_to_boxes.py  edb779c5d941_add_onnx_path_to_training_jobs.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: __init__.py  config.py  database.py  exceptions.py  gpu_memory.py  logging.py  middleware.py
backend/app/models/: __init__.py  detection.py  train.py  video.py
backend/app/repositories/: detection.py  video.py
backend/app/schemas/: common.py  detection.py  train.py  video.py
backend/app/services/: box_filter.py  coco_format.py  createml_format.py  dataset_import.py  detection_service.py  detection_strategy.py  export.py  frame_utils.py  locate_anything.py  sam2_service.py  sam3_client.py  (+5 more)
backend/tests/: test_api_integration.py  test_box_filter.py  test_build_dataset.py  test_dataset_import.py  test_detection_strategy.py  test_locate_anything.py  test_regression.py  test_trainer.py  test_video_service.py
(+191 files in other folders)
